--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ Markdown==3.4.1
 MarkupSafe==2.1.2
 numpy==1.24.2
 oauthlib==3.2.2
-opencv-python==4.7.0.72
+opencv-python-headless==4.2.0.32
 opt-einsum==3.3.0
 packaging==23.0
 protobuf==3.19.6
